Sonar issues in helix engine