@@ -1,10 +1,11 @@
 package tops.engine.helix;
 
+import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.HashMap;
+import java.util.Deque;
 import java.util.List;
-import java.util.Stack;
+import java.util.Map;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
@@ -15,19 +16,21 @@ import tops.engine.Vertex;
 
 public class Explorer {
 
+    private static final String PATTERN_NAME = "pattern:";
+
     private List<Vertex> vertices;
 
-    private Stack<Sheet> sheets;
+    private Deque<Sheet> sheets;
 
     private Sheet currentSheet;
 
     private Matcher m;
 
-    private final static int FROMLEFT = 1;
+    private static final int FROMLEFT = 1;
 
-    private final static int TORIGHT = 2;
+    private static final int TORIGHT = 2;
 
-    private final static int CYCLE = 3;
+    private static final int CYCLE = 3;
 
     private static final Edge[] types = {
             new Edge(new Vertex('E', 0), new Vertex('E', 0), 'P'),
@@ -53,12 +56,11 @@ public class Explorer {
             new Edge(new Vertex('h', 0), new Vertex('h', 0), 'L'),
             new Edge(new Vertex('h', 0), new Vertex('h', 0), 'R'), };
 
-    private static Logger logger = Logger
-            .getLogger("tops.engine.helix.Explorer");
+    private static Logger logger = Logger.getLogger(Explorer.class.getName());
 
     public Explorer() {
-        this.sheets = new Stack<Sheet>();
-        this.vertices = new ArrayList<Vertex>();
+        this.sheets = new ArrayDeque<>();
+        this.vertices = new ArrayList<>();
         this.vertices.add(new Vertex('N', 0));
         this.vertices.add(new Vertex('C', 1));
         this.currentSheet = null;
@@ -82,31 +84,31 @@ public class Explorer {
         String spliced = result.splice(fin);
         Pattern chi = this.doChirals(new Pattern(spliced));
         chi.sortEdges();
-        chi.rename("pattern:");
-        return new String(this.doCompression(instances, chi) + "\t" + chi.toString());
+        chi.rename(PATTERN_NAME);
+        return this.doCompression(instances, chi) + "\t" + chi.toString();
     }
 
     public void clear() {
-        this.sheets = new Stack<Sheet>();
-        this.vertices = new ArrayList<Vertex>();
+        this.sheets.clear();
+        this.vertices.clear();
         this.vertices.add(new Vertex('N', 0));
         this.vertices.add(new Vertex('C', 1));
         this.currentSheet = null;
     }
 
-    public void allVsAll(ArrayList<String[]> pairList, HashMap<String, String> instMap, boolean verbose)
+    public void allVsAll(List<String[]> pairList, Map<String, String> instMap, boolean verbose)
             throws TopsStringFormatException {
         // the domain names we are comparing are (pairKey, pairValue).
-        String pair1, pair2;
-        String[][] pairs = (String[][]) pairList.toArray(new String[0][]);
+        String pair1;
+        String pair2;
+        String[][] pairs = pairList.toArray(new String[0][]);
         String[] couple = new String[2];
-//        TParser tp = new TParser();
 
         for (int i = 0; i < pairs.length; ++i) {
             pair1 = pairs[i][0];
             pair2 = pairs[i][1];
-            couple[0] = (String) instMap.get(pair1);
-            couple[1] = (String) instMap.get(pair2);
+            couple[0] = instMap.get(pair1);
+            couple[1] = instMap.get(pair2);
 
             if (couple[0] != null && couple[1] != null) {
                 // do the real work!
@@ -133,30 +135,20 @@ public class Explorer {
                         commonPattern = result;
                     }
                     commonPattern.sortEdges();
-                    commonPattern.rename("pattern:");
+                    commonPattern.rename(PATTERN_NAME);
                     if (verbose) {
                         this.doVerbosePairCompression(couple, commonPattern,
                                 pair1, pair2);
                     } else {
-                        /*
-                         * Object[] data = { new Float(doDrgCompression(couple,
-                         * commonPattern)), //new Float(doCompression(couple,
-                         * commonPattern)), pair1, pair2, commonPattern };
-                         * this.logger.log(Level.INFO, "", data);
-                         */
-                        System.out.println(this.doDrgCompression(couple,
-                                commonPattern)
-                                + "\t"
-                                + pair1
-                                + "\t"
-                                + pair2
-                                + "\t"
-                                + commonPattern);
+                        logger.log(Level.INFO, "{0}\t{1}\t{2}\t{3}", new Object[] {
+                                this.doDrgCompression(couple, commonPattern),
+                                pair1,
+                                pair2,
+                                commonPattern});
                     }
                     this.clear();
                 } catch (Exception e) {
-                    System.err.println(pair1 + " , " + pair2 + ", " + e);
-                    e.printStackTrace(System.err);
+                    logger.warning(pair1 + " , " + pair2 + ", " + e);
                 }
             } else {
                 Explorer.logger.log(Level.FINEST, "ONE OF THE NAMES WAS NULL! : ",
@@ -167,11 +159,10 @@ public class Explorer {
 
     public Result[] compare(String[] examples, String probe, boolean logging)
             throws TopsStringFormatException {
-        // String[] results = new String[examples.length];
-        ArrayList<Result> results = new ArrayList<Result>(examples.length);
+        List<Result> results = new ArrayList<>(examples.length);
         Pattern[] pair = new Pattern[2];
         pair[0] = new Pattern(probe);
-        System.out.println("for probe : \t" + probe);
+        logger.log(Level.INFO, "for probe : \t{0}", probe);
         this.m = new Matcher();
         this.m.setLogging(logging);
         for (int e = 0; e < examples.length; e++) { // for each example, compare
@@ -185,18 +176,12 @@ public class Explorer {
                 this.currentSheet = this.makeSheet();
             }
             Pattern result = this.getPattern();
-            Explorer.logger.log(Level.INFO, "Finished extending : " + result);
-//            String matchString = "[]";
+            logger.log(Level.INFO, "Finished extending : {0}", result);
             if (this.m.runsSuccessfully(result)) {
-                // System.out.println("common pattern : " + result + "\tinstance
-                // : " + examples[e] + "\tmatch : " + result.getMatchString());
-//                String tmp = result.getMatchString();
-//                if (!tmp.equals(" ]"))
-//                    matchString = tmp;
+                logger.info("success");
             } else {
-                Explorer.logger.log(Level.WARNING,
-                        "SEVERE PROBLEM : FINAL PATTERN " + result
-                                + " does not match " + examples[e]);
+                logger.log(Level.WARNING,
+                        "SEVERE PROBLEM : FINAL PATTERN {0} does not match  {1}", new Object[] {result, examples[e] });
             } // !!
             String[][] ins = this.m.generateInserts(result);
             Dynamo dyn = new Dynamo();
@@ -204,9 +189,8 @@ public class Explorer {
             String spliced = result.splice(fin);
             Pattern chi = this.doChirals(new Pattern(spliced));
             chi.sortEdges();
-            chi.rename("pattern:");
+            chi.rename(PATTERN_NAME);
 
-            // float c2 = doCompression(pair, chi);
             float c2 = this.doDrgCompression(pair, chi);
 
             Result r = new Result(
@@ -216,7 +200,7 @@ public class Explorer {
             this.clear(); // reset pattern edge stack etc
         }
         Collections.sort(results);
-        return (Result[]) results.toArray(new Result[0]);
+        return results.toArray(new Result[0]);
     }
 
     public int getMinThings(Pattern[] instances) {
@@ -241,18 +225,17 @@ public class Explorer {
     public float doCompression(Pattern[] instances, Pattern p) {
         // compression calculations
         int elements = p.vsize() + p.esize();
-        int total_things = 0;
+        int totalThings = 0;
         for (int i = 0; i < instances.length; i++) {
-            total_things += instances[i].vsize() + instances[i].esize();
+            totalThings += instances[i].vsize() + instances[i].esize();
         }
-        int min_things = this.getMinThings(instances);
-        int Craw = total_things - (elements * (instances.length - 1));
+        int minThings = this.getMinThings(instances);
+        int cRaw = totalThings - (elements * (instances.length - 1));
 
-        int tmp1 = total_things - Craw;
-        int tmp2 = total_things - min_things;
+        int tmp1 = totalThings - cRaw;
+        int tmp2 = totalThings - minThings;
 
-        float Cnorm = 1 - ((float) tmp1 / (float) tmp2);
-        return Cnorm;
+        return 1 - ((float) tmp1 / (float) tmp2);
     }
 
     public float doDrgCompression(String[] instances, Pattern p)
@@ -272,180 +255,168 @@ public class Explorer {
         Object[] data = new Object[20];
         int index = 1; // index 0 will be the compression!
 
-        int pattern_SSE = p.vsize();
-        int pattern_HBond = p.getNumberOfHBonds();
-        int pattern_HPP = p.getNumberOfHPP();
-        int pattern_Chiral = p.getNumberOfChirals();
+        int patternSSE = p.vsize();
+        int patternHBond = p.getNumberOfHBonds();
+        int patternHPP = p.getNumberOfHPP();
+        int patternChiral = p.getNumberOfChirals();
 
-        data[index++] = new Integer(pattern_SSE);
-        data[index++] = new Integer(pattern_HBond);
-        data[index++] = new Integer(pattern_HPP);
-        data[index++] = new Integer(pattern_Chiral);
+        data[index++] = patternSSE;
+        data[index++] = patternHBond;
+        data[index++] = patternHPP;
+        data[index++] = patternChiral;
 
-        int pair0_SSE = pair[0].vsize();
-        int pair0_HBond = pair[0].getNumberOfHBonds();
-        int pair0_HPP = pair[0].getNumberOfHPP();
-        int pair0_Chiral = pair[0].getNumberOfChirals();
+        int pair0SSE = pair[0].vsize();
+        int pair0HBond = pair[0].getNumberOfHBonds();
+        int pair0HPP = pair[0].getNumberOfHPP();
+        int pair0Chiral = pair[0].getNumberOfChirals();
 
-        data[index++] = new Integer(pair0_SSE);
-        data[index++] = new Integer(pair0_HBond);
-        data[index++] = new Integer(pair0_HPP);
-        data[index++] = new Integer(pair0_Chiral);
+        data[index++] = pair0SSE;
+        data[index++] = pair0HBond;
+        data[index++] = pair0HPP;
+        data[index++] = pair0Chiral;
 
-        int pair1_SSE = pair[1].vsize();
-        int pair1_HBond = pair[1].getNumberOfHBonds();
-        int pair1_HPP = pair[1].getNumberOfHPP();
-        int pair1_Chiral = pair[1].getNumberOfChirals();
+        int pair1SSE = pair[1].vsize();
+        int pair1HBond = pair[1].getNumberOfHBonds();
+        int pair1HPP = pair[1].getNumberOfHPP();
+        int pair1Chiral = pair[1].getNumberOfChirals();
 
-        data[index++] = new Integer(pair1_SSE);
-        data[index++] = new Integer(pair1_HBond);
-        data[index++] = new Integer(pair1_HPP);
-        data[index++] = new Integer(pair1_Chiral);
+        data[index++] = pair1SSE;
+        data[index++] = pair1HBond;
+        data[index++] = pair1HPP;
+        data[index++] = pair1Chiral;
 
-        int instanceTotal_SSE = pair0_SSE + pair1_SSE;
-        int instanceTotal_HBond = pair0_HBond + pair1_HBond;
-        int instanceTotal_HPP = pair0_HPP + pair1_HPP;
-        int instanceTotal_Chiral = pair0_Chiral + pair1_Chiral;
+        int instanceTotalSSE = pair0SSE + pair1SSE;
+        int instanceTotalHBond = pair0HBond + pair1HBond;
+        int instanceTotalHPP = pair0HPP + pair1HPP;
+        int instanceTotalChiral = pair0Chiral + pair1Chiral;
 
-        int minimum_SSE = Math.min(pair0_SSE, pair1_SSE);
-        int minimum_HBond = Math.min(pair0_HBond, pair1_HBond);
-        int minimum_HPP = Math.min(pair0_HPP, pair1_HPP);
-        int minimum_Chiral = Math.min(pair0_Chiral, pair1_Chiral);
+        int minimumSSE = Math.min(pair0SSE, pair1SSE);
+        int minimumHBond = Math.min(pair0HBond, pair1HBond);
+        int minimumHPP = Math.min(pair0HPP, pair1HPP);
+        int minimumChiral = Math.min(pair0Chiral, pair1Chiral);
 
-        int cRaw_SSE = instanceTotal_SSE - pattern_SSE;
-        int cRaw_HBond = instanceTotal_HBond - pattern_HBond;
-        int cRaw_HPP = instanceTotal_HPP - pattern_HPP;
-        int cRaw_Chiral = instanceTotal_Chiral - pattern_Chiral;
+        int cRawSSE = instanceTotalSSE - patternSSE;
+        int cRawHBond = instanceTotalHBond - patternHBond;
+        int cRawHPP = instanceTotalHPP - patternHPP;
+        int cRawChiral = instanceTotalChiral - patternChiral;
 
-        float cNorm_SSE = this.normalizedScore(instanceTotal_SSE, cRaw_SSE,
-                minimum_SSE);
-        float cNorm_HBond = this.normalizedScore(instanceTotal_HBond,
-                cRaw_HBond, minimum_HBond);
-        float cNorm_HPP = this.normalizedScore(instanceTotal_HPP, cRaw_HPP,
-                minimum_HPP);
-        float cNorm_Chiral = this.normalizedScore(instanceTotal_Chiral,
-                cRaw_Chiral, minimum_Chiral);
+        float cNormSSE = this.normalizedScore(instanceTotalSSE, cRawSSE, minimumSSE);
+        float cNormHBond = this.normalizedScore(instanceTotalHBond, cRawHBond, minimumHBond);
+        float cNormHPP = this.normalizedScore(instanceTotalHPP, cRawHPP, minimumHPP);
+        float cNormChiral = this.normalizedScore(instanceTotalChiral, cRawChiral, minimumChiral);
 
-        data[index++] = new Float(cNorm_SSE);
-        data[index++] = new Float(cNorm_HBond);
-        data[index++] = new Float(cNorm_HPP);
-        data[index++] = new Float(cNorm_Chiral);
+        data[index++] = cNormSSE;
+        data[index++] = cNormHBond;
+        data[index++] = cNormHPP;
+        data[index++] = cNormChiral;
 
         int divisor = 4;
         float cTotal = 0;
 
-        if (cNorm_SSE == -1) {
+        if (cNormSSE == -1) {
             divisor -= 1;
         } else {
-            cTotal += cNorm_SSE;
+            cTotal += cNormSSE;
         }
 
-        if (cNorm_HBond == -1) {
+        if (cNormHBond == -1) {
             divisor -= 1;
         } else {
-            cTotal += cNorm_HBond;
+            cTotal += cNormHBond;
         }
 
-        if (cNorm_HPP == -1) {
+        if (cNormHPP == -1) {
             divisor -= 1;
         } else {
-            cTotal += cNorm_HPP;
+            cTotal += cNormHPP;
         }
 
-        if (cNorm_Chiral == -1) {
+        if (cNormChiral == -1) {
             divisor -= 1;
         } else {
-            cTotal += cNorm_Chiral;
+            cTotal += cNormChiral;
         }
 
         // empty pattern!
         if (divisor == 0) {
-            data[0] = new Integer(0);
+            data[0] = 0;
         } else {
-            data[0] = new Float(cTotal / divisor);
+            data[0] = cTotal / divisor;
         }
         data[index++] = name0;
         data[index++] = name1;
-        data[index++] = p.toString();
-        Explorer.logger.log(Level.SEVERE, "", data);
+        data[index] = p.toString();
+        logger.log(Level.SEVERE, "", data);
     }
 
     public float doDrgCompression(Pattern[] instances, Pattern p) {
-        int pattern_SSE = p.vsize();
-        int pattern_HBond = p.getNumberOfHBonds();
-        int pattern_HPP = p.getNumberOfHPP();
-        int pattern_Chiral = p.getNumberOfChirals();
+        int patternSSE = p.vsize();
+        int patternHBond = p.getNumberOfHBonds();
+        int patternHPP = p.getNumberOfHPP();
+        int patternChiral = p.getNumberOfChirals();
 
-        int instanceTotal_SSE = 0;
-        int instanceTotal_HBond = 0;
-        int instanceTotal_HPP = 0;
-        int instanceTotal_Chiral = 0;
+        int instanceTotalSSE = 0;
+        int instanceTotalHBond = 0;
+        int instanceTotalHPP = 0;
+        int instanceTotalChiral = 0;
 
-        int minimum_SSE = Integer.MAX_VALUE;
-        int minimum_HBond = Integer.MAX_VALUE;
-        int minimum_HPP = Integer.MAX_VALUE;
-        int minimum_Chiral = Integer.MAX_VALUE;
+        int minimumSSE = Integer.MAX_VALUE;
+        int minimumHBond = Integer.MAX_VALUE;
+        int minimumHPP = Integer.MAX_VALUE;
+        int minimumChiral = Integer.MAX_VALUE;
 
         for (int i = 0; i < instances.length; i++) {
-            int instance_SSE = instances[i].vsize();
-            int instance_HBond = instances[i].getNumberOfHBonds();
-            int instance_HPP = instances[i].getNumberOfHPP();
-            int instance_Chiral = instances[i].getNumberOfChirals();
+            int instanceSSE = instances[i].vsize();
+            int instanceHBond = instances[i].getNumberOfHBonds();
+            int instanceHPP = instances[i].getNumberOfHPP();
+            int instanceChiral = instances[i].getNumberOfChirals();
 
-            instanceTotal_SSE += instance_SSE;
-            instanceTotal_HBond += instance_HBond;
-            instanceTotal_HPP += instance_HPP;
-            instanceTotal_Chiral += instance_Chiral;
+            instanceTotalSSE += instanceSSE;
+            instanceTotalHBond += instanceHBond;
+            instanceTotalHPP += instanceHPP;
+            instanceTotalChiral += instanceChiral;
 
-            minimum_SSE = Math.min(minimum_SSE, instance_SSE);
-            minimum_HBond = Math.min(minimum_HBond, instance_HBond);
-            minimum_HPP = Math.min(minimum_HPP, instance_HPP);
-            minimum_Chiral = Math.min(minimum_Chiral, instance_Chiral);
+            minimumSSE = Math.min(minimumSSE, instanceSSE);
+            minimumHBond = Math.min(minimumHBond, instanceHBond);
+            minimumHPP = Math.min(minimumHPP, instanceHPP);
+            minimumChiral = Math.min(minimumChiral, instanceChiral);
         }
 
-        int cRaw_SSE = this.rawScore(instanceTotal_SSE, pattern_SSE,
-                instances.length);
-        int cRaw_HBond = this.rawScore(instanceTotal_HBond, pattern_HBond,
-                instances.length);
-        int cRaw_HPP = this.rawScore(instanceTotal_HPP, pattern_HPP,
-                instances.length);
-        int cRaw_Chiral = this.rawScore(instanceTotal_Chiral, pattern_Chiral,
-                instances.length);
+        int cRawSSE = rawScore(instanceTotalSSE, patternSSE, instances.length);
+        int cRawHBond = rawScore(instanceTotalHBond, patternHBond, instances.length);
+        int cRawHPP = rawScore(instanceTotalHPP, patternHPP, instances.length);
+        int cRawChiral = this.rawScore(instanceTotalChiral, patternChiral, instances.length);
 
-        float cNorm_SSE = this.normalizedScore(instanceTotal_SSE, cRaw_SSE,
-                minimum_SSE);
-        float cNorm_HBond = this.normalizedScore(instanceTotal_HBond,
-                cRaw_HBond, minimum_HBond);
-        float cNorm_HPP = this.normalizedScore(instanceTotal_HPP, cRaw_HPP,
-                minimum_HPP);
-        float cNorm_Chiral = this.normalizedScore(instanceTotal_Chiral,
-                cRaw_Chiral, minimum_Chiral);
+        float cNormSSE = this.normalizedScore(instanceTotalSSE, cRawSSE, minimumSSE);
+        float cNormHBond = this.normalizedScore(instanceTotalHBond, cRawHBond, minimumHBond);
+        float cNormHPP = this.normalizedScore(instanceTotalHPP, cRawHPP, minimumHPP);
+        float cNormChiral = this.normalizedScore(instanceTotalChiral, cRawChiral, minimumChiral);
 
         int divisor = 4;
         float cTotal = 0;
 
-        if (cNorm_SSE == -1) {
+        if (cNormSSE == -1) {
             divisor -= 1;
         } else {
-            cTotal += cNorm_SSE;
+            cTotal += cNormSSE;
         }
 
-        if (cNorm_HBond == -1) {
+        if (cNormHBond == -1) {
             divisor -= 1;
         } else {
-            cTotal += cNorm_HBond;
+            cTotal += cNormHBond;
         }
 
-        if (cNorm_HPP == -1) {
+        if (cNormHPP == -1) {
             divisor -= 1;
         } else {
-            cTotal += cNorm_HPP;
+            cTotal += cNormHPP;
         }
 
-        if (cNorm_Chiral == -1) {
+        if (cNormChiral == -1) {
             divisor -= 1;
         } else {
-            cTotal += cNorm_Chiral;
+            cTotal += cNormChiral;
         }
 
         // empty pattern!
@@ -456,14 +427,13 @@ public class Explorer {
         }
     }
 
-    public int rawScore(int instanceTotal, int patternTotal,
-            int numberOfInstances) {
+    public int rawScore(int instanceTotal, int patternTotal, int numberOfInstances) {
         return instanceTotal - (patternTotal * (numberOfInstances - 1));
     }
 
     public float normalizedScore(int instanceTotal, int rawScore, int minimum) {
         float score = 1 - ((float) (instanceTotal - rawScore) / (float) (instanceTotal - minimum));
-        if ((new Float(score)).isNaN()) {
+        if ((Float.valueOf(score)).isNaN()) {
             return -1;
         } else {
             return score;
@@ -472,7 +442,6 @@ public class Explorer {
 
     public String reproduce(String example) throws TopsStringFormatException {
         String[] ex = { example };
-//        int vertexcount = (example.substring(example.indexOf(' ') + 1, example.lastIndexOf(' '))).length() - 2;
         this.m = new Matcher(ex);
 
         this.currentSheet = this.makeSheet();
@@ -481,19 +450,18 @@ public class Explorer {
             this.currentSheet = this.makeSheet();
         }
         Pattern result = this.getPattern();
-        result.rename(example.substring(0, example.indexOf(" ")));
-        System.out.println("hbonds...." + result);
+        result.rename(example.substring(0, example.indexOf(' ')));
+        logger.log(Level.INFO, "hbonds.... {0}", result);
         String[][] ins = this.m.generateInserts(result);
-
 
         Dynamo dyn = new Dynamo();
         String[] fin = dyn.doInserts(ins);
         String spliced = result.splice(fin);
-        System.out.println("spliced..." + spliced);
+        logger.log(Level.INFO, "spliced... {0}", spliced);
         Pattern chi = this.doChirals(new Pattern(spliced));
         chi.sortEdges();
-        System.out.println("chirals..." + chi);
-        return new String();
+        logger.log(Level.INFO, "chirals... {0}", chi);
+        return "";
     }
 
     public String reproduce(String[] examples) throws TopsStringFormatException {
@@ -505,22 +473,17 @@ public class Explorer {
             this.currentSheet = this.makeSheet();
         }
         Pattern result = this.getPattern();
-        System.out.println("result : " + result);
+        logger.log(Level.INFO, "result : {0}", result);
         String[][] ins = this.m.generateInserts(result);
         Dynamo dyn = new Dynamo();
         String[] fin = dyn.doInserts(ins);
         String spliced = result.splice(fin);
-        System.out.println("spliced : " + spliced);
+        logger.log(Level.INFO, "spliced : {0}", spliced);
         Pattern chi = this.doChirals(new Pattern(spliced));
         chi.sortEdges();
         return chi.toString();
     }
 
-    /*
-     * ###########################################################
-     * ###########################################################
-     * ###########################################################
-     */
     public Pattern doChirals(Pattern p) throws TopsStringFormatException {
         int end = p.getCTermPosition();
         for (int i = 1; i < end - 2; i++) {
@@ -530,10 +493,9 @@ public class Explorer {
                     if (vleft == this.vtype(p, j)) {
                         for (int t = 0; t < Explorer.chiral_types.length; t++) {
                             char ltyp = Explorer.chiral_types[t].getLType();
-//                            char tmp = Explorer.chiral_types[t].getType();
-                            if (vleft == ltyp) {
-                                if (this.tryChiral(p, i, j, Explorer.chiral_types[t]))
-                                    break;
+                            Edge tType = Explorer.chiral_types[t];
+                            if (vleft == ltyp && this.tryChiral(p, i, j, tType)) {
+                                break;
                             }
                         }
                     }
@@ -561,14 +523,9 @@ public class Explorer {
     }
 
     public Sheet makeSheet() {
-        // int lhe = (currentSheet == null)? 1 : currentSheet.getLEndpoint() +
-        // 1; //add one because inserting BEFORE this vertex
         int lhe = 1; // always try and add a new sheet anywhere
-        int rhe = (this.currentSheet == null) ? 2 : this.getCTermPosition(); // absolute
-                                                                    // right
-                                                                    // hand end
-                                                                    // -
-                                                                    // vertices.size()
+        int rhe = (this.currentSheet == null) ? 2 : this.getCTermPosition(); 
+        // absolute right hand end - vertices.size()
         Sheet result = null;
 
         for (int i = lhe; i <= rhe; i++) {
@@ -609,9 +566,7 @@ public class Explorer {
 
     public boolean extend(int dir) {
         int lhe = this.currentSheet.getLEndpoint();
-        // int rhe = currentSheet.getREndpoint();
-        int rhe = this.getCTermPosition(); // absolute right hand end -
-                                        // vertices.size()
+        int rhe = this.getCTermPosition(); // absolute right hand end - vertices.size()
 
         switch (dir) {
 
@@ -659,7 +614,6 @@ public class Explorer {
             case TORIGHT:
                 for (int i = 1; i <= rhe; i++) { // LESS THAN rhe. never want
                                                     // to insert before C!
-                    // for (int j = lhe + 2; j <= rhe; j++) {
                     for (int j = lhe; j <= rhe; j++) {
                         if (i < j) {
                             for (int t = 0; t < Explorer.types.length; t++) {
@@ -678,6 +632,9 @@ public class Explorer {
                     }
                 }
                 break;
+                
+                default: 
+                    break;
         }
 
         return false;
@@ -704,12 +661,11 @@ public class Explorer {
     }
 
     public boolean newSheetMatches(Pattern currentPattern) {
-        Explorer.logger.log(Level.INFO, "matching new sheet");
+        logger.info("matching new sheet");
         if (this.m.runsSuccessfully(currentPattern)) {
             return true;
         } else {
-            ((Sheet) this.sheets.pop()).remove(); // remove the underlying
-                                                // vertices
+            this.sheets.pop().remove(); // remove the underlying vertices
             return false;
         }
     }
